# rusty_plugin_workflow

./: .gitignore  Cargo.toml  app_config.toml  b_all.bat  b_ios.sh  b_mac.sh  b_sdk_win.bat  b_win.bat  c_b.bat  c_mac.sh  clean_ios_builds.sh  cleanup_large_files.sh  create_green_dot_favicon.sh  create_plugin.bat  create_plugin.sh  create_plugin_readme.md  execution-plan.json  execution_plan.toml  iOS_BUILD_OPTIMIZATION.md  optimize_wifi_plugin.sh  package-lock.json  package.json  plugin_activity.md  plugin_class_diagram.md  plugin_component_diagram.md  plugin_lifecycle.md  plugin_lifecycle_sequence_diagram.md  readme.md  readme_arch.md  readme_arch_6_pager.md  readme_create_plugin.md  readme_execution_plan.md  readme_fix_unix_file.md  readme_framing_6_pager.md  readme_jwt.md  readme_logging.md  readme_plugin_architecture.md  readme_prfaq_6_pager.md  readme_ws.md  test_ws.html  (+3 more)
____web/: index.html  step-terms.js
docs/: plugin_migration_guide.md
engine/: Cargo.toml
engine/src/: lib.rs  main.rs  plugin_loader.rs  plugin_manager.rs  router_manager.rs  websocket_manager.rs
engine_android_ui/: README.md
engine_core/: Cargo.toml
engine_core/src/: execution_plan.rs  execution_plan_updater.rs  handlers.rs  jwt_gen_util.rs  lib.rs  plugin_binding.rs  plugin_loader.rs  plugin_metadata.rs  plugin_registry.rs  plugin_utils.rs  ws_utils.rs
engine_desktop_ui/: Cargo.toml  build.rs  scoobe_thoughts.md
engine_desktop_ui/src/: main.rs
engine_ios_ui/: .gitignore  Makefile  README.md  b_ios.sh  build_rust_libraries.sh  iOS_INTEGRATION_GUIDE.md  setup_xcode_project.sh
engine_ios_ui/EngineIOSUI/: ContentView.swift  EngineIOSUIApp.swift  Info.plist  RustFFI.swift  RustServerController.swift  WebViewContainer.swift
engine_ios_ui/EngineIOSUI.xcodeproj/: project.pbxproj
ext_plan/Echo/1.3/: execution_plan.toml
libjwt/: Cargo.toml
libjwt/src/: auth.rs  jwt_manager.rs  lib.rs  models.rs  renewal.rs  routes.rs  session.rs  storage.rs  test_route.rs  token.rs
liblogger/: Cargo.toml
liblogger/src/: config.rs  lib.rs  logger.rs  outputs.rs
liblogger_macros/: Cargo.toml
liblogger_macros/src/: lib.rs  macro_utils.rs
libws/: Cargo.toml
libws/src/: lib.rs  ws_client.rs
logger/: Cargo.toml  config.json
logger/src/: file_log_destination.rs  http_log_destination.rs  lib.rs  log_config.rs  log_contracts.rs  log_writer.rs  logger_loader.rs
plugin_api/: Cargo.toml
plugin_api/src/: lib.rs
plugin_core/: Cargo.toml  logger_readme.md
plugin_core/src/: api_header.rs  api_request.rs  api_response.rs  error_response.rs  helper_functions.rs  http_method.rs  jwt_auth.rs  jwt_utils.rs  lib.rs  logging.rs  plugin.rs  plugin_context.rs  plugin_macros.rs  resource.rs  resource_utils.rs  response_utils.rs  success_response.rs  ws_utils.rs
plugin_templates/: Cargo.toml.template  README_template.md  README_x.md.template  lib.rs.template  plugin_definition.toml.template  step-template.html  step-template.js  step-x.html.template  step-x.js.template
plugins/plugin_execplan/: Cargo.toml  README.md
plugins/plugin_execplan/src/: lib.rs
plugins/plugin_execplan/web/: step-execution.html  step-execution.js
plugins/plugin_finish/: Cargo.toml  README.md  plugin_metadata.toml
plugins/plugin_finish/src/: lib.rs
plugins/plugin_finish/web/: step-finish.html  step-finish.js
plugins/plugin_howto/: Cargo.toml  README.md  plugin_metadata.toml
plugins/plugin_howto/src/: lib.rs
plugins/plugin_howto/web/: step-howto.html  step-howto.js
plugins/plugin_login/: Cargo.toml  README.md
plugins/plugin_login/src/: lib.rs
plugins/plugin_login/web/: auth-manager.js  callback.html  login-styles.css  step-login.html  step-login.js
plugins/plugin_mockwifi/: Cargo.toml  plugin_metadata.toml
plugins/plugin_mockwifi/src/: lib.rs  network_info.rs
plugins/plugin_mockwifi/web/: step-mwifi.html  step-mwifi.js
plugins/plugin_provisioning/: Cargo.toml  README.md
plugins/plugin_provisioning/src/: lib.rs
plugins/plugin_provisioning/web/: step-provision.html  step-provision.js
plugins/plugin_settings/: Cargo.toml  README.md
plugins/plugin_settings/src/: lib.rs
plugins/plugin_settings/web/: step-settings.html  step-settings.js
plugins/plugin_status/: Cargo.toml
plugins/plugin_status/src/: lib.rs
plugins/plugin_status/web/: step-status.html  step-status.js
plugins/plugin_task_agent_headless/: Cargo.toml
plugins/plugin_task_agent_headless/src/: lib.rs
plugins/plugin_task_agent_headless/web/: step-taskagent.html  step-taskagent.js
plugins/plugin_terms/: Cargo.toml
plugins/plugin_terms/src/: lib.rs
plugins/plugin_terms/src/web/: step-terms.js
plugins/plugin_terms/web/: step-terms.html  step-terms.js  userterms.txt
plugins/plugin_tutorial/: Cargo.toml  README.md  plugin_metadata.toml
plugins/plugin_tutorial/src/: lib.rs
plugins/plugin_tutorial/web/: step-tutorial.html  step-tutorial.js
plugins/plugin_welcome/: Cargo.toml  README.md
plugins/plugin_welcome/src/: lib.rs
plugins/plugin_welcome/web/: step-welcome.html  step-welcome.js
plugins/plugin_wifi/: Cargo.toml  build.rs
plugins/plugin_wifi/src/: Info.plist  entitlements.plist  lib.rs  network_info.rs  wifi_corewlan.m  wifi_manager.rs  wifi_manager_cp.rs
plugins/plugin_wifi/web/: index.html  step-wifi.html  step-wifi.js
plugins/shared/: plugin-styles.css
web/: app.js  index.html  step-wifi.js  styles.css
webapp/: app.js  app_manager.js  index.html  jwt_manager.js  observable.js  plugin_loader.js  router.js  styles.css  tailwind.config.js  websocket_connection_manager.js
ws_server/: Cargo.toml
ws_server/src/: lib.rs  ws_client.rs
