[workspace]
members = [
    "engine", "engine_core",
    "plugin_core", "plugins/plugin_terms",
    "plugins/plugin_wifi", "logger", "ws_server",
    "engine_desktop_ui", "plugins/plugin_status", "plugins/plugin_task_agent_headless", "plugins/plugin_settings"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "http1", "tokio"] }
tokio = { version = "1.36", features = ["full"] }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
async-trait = "0.1"
toml = "0.5"
logger = { path = "../logger"}
plugin_core = { path = "../plugin_core" }
engine_core = { path = "../engine_core"}
engine = { path = "../engine" }
ws = { path = "../ws_server"}
