[workspace]
members = [
    "engine", "engine_core",
    "plugin_core", "plugins/plugin_terms", "plugins/plugin_login", "plugins/plugin_provisioning",
    "plugins/plugin_wifi", "ws_server", "liblogger", "liblogger_macros", "plugins/plugin_welcome", "plugins/plugin_execplan",
    "engine_desktop_ui", "plugins/plugin_status", "plugins/plugin_task_agent_headless", "plugins/plugin_settings"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "http1", "tokio"] }
tokio = { version = "1.36", features = ["full"] }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
async-trait = "0.1"
toml = "0.5"
plugin_core = { path = "../plugin_core" }
engine_core = { path = "../engine_core"}
engine = { path = "../engine" }
ws_server = { path = "../ws_server"}
liblogger = { path = "../liblogger", features = ["proc_macros"] }
liblogger_macros = { path = "../liblogger_macros" }