[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
crate-type = ["rlib", "staticlib", "cdylib"] 

[dependencies]
libloading = "0.8"
tokio = { version = "1.37", features = ["macros", "net", "fs"] }
axum = { version = "0.7.9", features = ["http2"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde", "alloc"] }
logger = { path = "../logger" }
plugin_core = { path = "../plugin_core" }
engine_core = { path = "../engine_core" }
ws_server = { path = "../ws_server"}