[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
crate-type = ["rlib", "staticlib", "cdylib"] 

[dependencies]
libloading = "0.8"
tokio = { version = "1.37", features = ["macros", "net", "fs"] }
axum = { version = "0.7.9", features = ["http2"] }
tower = { version = "0.4", features = ["make", "util"] }
tower-http = { version = "0.5", features = ["trace", "fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
ctor = "0.1"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde", "alloc"] }
uuid = { version = "1.4", features = ["v4"] }
plugin_core = { path = "../plugin_core", features = ["logging"] }
engine_core = { path = "../engine_core" }
libjwt = { path = "../libjwt"}
libws = { path = "../libws"}
liblogger = { path = "../liblogger" }
liblogger_macros = { path = "../liblogger_macros" }