[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
axum = { version = "0.7", features = ["http1", "tokio"] }
http = "1"
ureq = "2.9"
once_cell = "1.19"
plugin_core = { path = "../plugin_core" }
ws_server = { path = "../ws_server"}