[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
toml = "0.8"
axum = { version = "0.7", features = ["http1", "tokio"] }
http = "1"
ureq = "2.9"
once_cell = "1.19"
uuid = { version = "1.4", features = ["v4"] }
plugin_core = { path = "../plugin_core" }
libws = { path = "../libws"}
liblogger = { path = "../liblogger", features = ["proc_macros"] }
liblogger_macros = { path = "../liblogger_macros" }