[package]
name = "libjwt"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
