[package]
name = "libjwt"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
tokio-rusqlite = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"
config = "0.14"
