[package]
name = "liblogger"
version = "0.1.0"
edition = "2021"
description = "A production-quality, ergonomic logger in Rust"

[dependencies]
once_cell = "1.18.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
chrono = "0.4.26"
liblogger_macros = { path = "../liblogger_macros", optional = true }

[features]
default = []
proc_macros = ["dep:liblogger_macros"]
prometheus = ["liblogger_macros/prometheus"]
memory_usage = ["liblogger_macros/memory_usage"]
