[package]
name = "liblogger_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
uuid = { version = "1.4.1", features = ["v4"] }

[features]
default = []
prometheus = ["dep:prometheus"]
memory_usage = ["dep:psutil"]

[dependencies.prometheus]
version = "0.13"
optional = true

[dependencies.psutil]
version = "3.2"
optional = true
