[package]
name = "plugin_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
libc = "0.2"
once_cell = "1.19"
libws = { path = "../libws" }
liblogger = { path = "../liblogger", features = ["proc_macros"], optional = true }
liblogger_macros = { path = "../liblogger_macros", optional = true }

[features]
default = []
logging = ["liblogger", "liblogger_macros"]
