[package]
name = "plugin_execplan"
version = "0.1.0"
edition = "2021"

[dependencies]
plugin_core = { path = "../../plugin_core" }
ws_server = { path = "../../ws_server" }
axum = { version = "0.7", features = ["macros", "http1", "tokio"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "alloc"] }
serde_json = "1"
tower = "0.4"
async-trait = "0.1"
ctor = "0.1"
once_cell = "1.19"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
