[package]
name = "plugin_status"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "http1", "tokio"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
async-trait = "0.1"
ctor = "0.1"
once_cell = "1.19"
plugin_core = { path = "../../plugin_core", features = ["logging"] }
libws = { path = "../../libws" }
liblogger = { path = "../../liblogger" }
liblogger_macros = { path = "../../liblogger_macros" }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]