[package]
name = "plugin_terms"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
async-trait = "0.1"
ctor = "0.1"
plugin_core = { path = "../../plugin_core", features = ["logging"] }
libws = { path = "../../libws" }
liblogger = { path = "../../liblogger" }
liblogger_macros = { path = "../../liblogger_macros" }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]