[package]
name = "plugin_tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
once_cell = "1.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctor = "0.2"
chrono = "0.4"  # For timestamp generation
rand = "0.8"    # For random ID generation
plugin_core = { path = "../../plugin_core", features = ["logging"] }
ws_server = { path = "../../ws_server" }
liblogger = { path = "../../liblogger" }
liblogger_macros = { path = "../../liblogger_macros" }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
