[package]
name = "plugin_wifi"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
axum = { version = "0.7", features = ["macros", "http1", "tokio"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
async-trait = "0.1"
ctor = "0.1"
once_cell = "1.19"
wifi-rs = "0.2.4"
tokio-wifiscanner = "0.2.1"
plugin_core = { path = "../../plugin_core", features = ["logging"] }
ws_server = { path = "../../ws_server" }
liblogger = { path = "../../liblogger" }
liblogger_macros = { path = "../../liblogger_macros" }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
